# goldilocks

./: .gitignore  CudaArch.mk  Dockerfile.Qemu  Makefile  Makefile.Aarch64Qemu  README.md  configure.sh
benchs/: bench.cpp  bench_vec_merkle.cpp  bench_vec_ops.cpp
cryptography_cuda/benches/: gpu_fft.rs
cryptography_cuda/cuda/ntt/: kernels.cu  ntt.cuh
cryptography_cuda/cuda/ntt/parameters/: goldilocks.h
cryptography_cuda/cuda/util/: gpu_t.cuh
cryptography_cuda/depends/ffiasm/: .gitignore  .gitmodules  CMakeLists.txt  README.md  tasksfile.js
cryptography_cuda/depends/ffiasm/benchmark/: benchmark.js
cryptography_cuda/depends/ffiasm/c/: alt_bn128_test.cpp
cryptography_cuda/examples/: compare.rs
cryptography_cuda/src/: lib.h
cryptography_cuda/tests/: ntt.rs
src/: cuda_utils.cuh  gl64_t.cuh  goldilocks_base_field.hpp  goldilocks_base_field_scalar.hpp  goldilocks_base_field_sve.hpp  goldilocks_cubic_extension.hpp  merklehash_goldilocks.hpp  ntt_goldilocks.cpp  ntt_goldilocks.cu  ntt_goldilocks.cuh  ntt_goldilocks.hpp  poseidon_goldilocks.cpp  poseidon_goldilocks.cu  poseidon_goldilocks.hpp  poseidon_goldilocks_avx.hpp  poseidon_goldilocks_avx512.hpp  poseidon_goldilocks_constants.hpp  poseidon_goldilocks_sve.cpp  poseidon_goldilocks_sve.hpp
tests/: goldilocks_cubic_extension.cu  main.cu  test_bigtree.cpp  test_full.cu  test_goldilocks_cubic_extension.hpp  test_merkle.cpp  test_ntt.cpp  test_poseidon.cpp  test_poseidon.cu  test_vec_quick.cpp  tests.cpp
utils/: cuda_utils.cu  cuda_utils.cuh  cuda_utils.hpp  papi.cpp  papi.hpp
